--- a/restic-api/tsconfig.json
+++ b/restic-api/tsconfig.json
@@ -21,8 +21,8 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "src/*": ["./src/*"],
-    },
+      "src/*": ["./src/*"]
+    }
   },
   "include": ["src", "test"]
 }
