--- a/restic-api/package.json
+++ b/restic-api/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/client-s3": "^3.965.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
