--- a/restic-api/package.json
+++ b/restic-api/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.965.0",
+    "@aws-sdk/lib-storage": "^3.965.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.2",
